--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "build": "tsc && npm run build-docs",
+    "start": "node dist/index.js",
+    "dev": "nodemon ./src/index.ts | pino-pretty",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@faker-js/faker": "^8.4.1",
+    "@redocly/cli": "^1.16.0",
     "eslint": "^9.2.0",
     "globals": "^15.1.0",
     "pino-pretty": "^11.1.0"
@@ -25,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.11.0",
     "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "joi": "^17.13.1",
@@ -34,6 +39,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.1",
-    "pino-http": "^10.1.0"
+    "pino-http": "^10.1.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
