--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && npm run build-docs",
+"build": "tsc && npm run build-docs ",
     "start": "node dist/index.js",
-    "dev": "nodemon ./src/index.ts | pino-pretty",
+    "dev": "nodemon ./src/index.js | pino-pretty",
     "build-docs": "redocly bundle --ext json -o docs/swagger.json",
     "preview-docs": "redocly preview-docs"
   },
