--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
 "build": "tsc && npm run build-docs ",
     "start": "node dist/index.js",
-    "dev": "nodemon ./src/index.js | pino-pretty",
+    "dev": "nodemon ./src/index.ts | pino-pretty",
     "build-docs": "redocly bundle --ext json -o docs/swagger.json",
     "preview-docs": "redocly preview-docs"
   },
